--- a/index.html
+++ b/index.html
@@ -7,12 +7,34 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Resto">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Aleo|Over+the+Rainbow" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Resto</title>
 </head>
 
 <body>
+
+    <header class="header">
+        <nav class="nav">
+            <div class="logo">
+                <a href="#">
+                    <img src="./img/logo.png" alt="Resto">
+                </a>
+            </div>
+            <div class="menu">
+                <a class="menu__item" href="#">Our Story</a>
+                <a class="menu__item" href="#">Menu</a>
+                <a class="menu__item" href="#">Reservations</a>
+                <a class="menu__item" href="#">News</a>
+                <a class="menu__item" href="#">Reviews</a>
+            </div>
+        </nav>
+        <div class="hero-section">
+            <h1 class="hero-section__header">This Template Is Awesome</h1>
+            <p class="hero-section__desc">resto restaurant home page website template</p>
+        </div>
+    </header>
 
 </body>
 
