finish restaurant menu

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Resto">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Aleo|Over+the+Rainbow" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Aleo:300i,400,700|Over+the+Rainbow" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Resto</title>
@@ -35,7 +35,67 @@
             <p class="hero-section__desc">resto restaurant home page website template</p>
         </div>
     </header>
-
+    <section class="restaurant-menu">
+        <h2 class="restaurant-menu__header">The Menu</h2>
+        <div class="restaurant-menu__lists">
+            <div class="restaurant-menu-list">
+                <div class="restaurant-menu-list__item">
+                    <p class="restaurant-menu-list__dish">Voluptate cillum fugiat.<br><span class="restaurant-menu-list__dish-desc">Cheese,
+                            tomato, mushrooms, onions.</span></p>
+                    <span class="restaurant-menu-list__line"></span>
+                    <span class="restaurant-menu-list__price">$50</span>
+                </div>
+                <div class="restaurant-menu-list__item">
+                    <p class="restaurant-menu-list__dish">Metus varius laoreet.<br><span class="restaurant-menu-list__dish-desc">Chicken,
+                            mozzarella cheese, onions.</span></p>
+                    <span class="restaurant-menu-list__line"></span>
+                    <span class="restaurant-menu-list__price">$62</span>
+                </div>
+                <div class="restaurant-menu-list__item">
+                    <p class="restaurant-menu-list__dish">Donec sodales magna.<br><span class="restaurant-menu-list__dish-desc">Tuna,
+                            Sweetcorn, Cheese.</span></p>
+                    <span class="restaurant-menu-list__line"></span>
+                    <span class="restaurant-menu-list__price">$25</span>
+                </div>
+                <div class="restaurant-menu-list__item">
+                    <p class="restaurant-menu-list__dish">Saugue velit cursus.<br><span class="restaurant-menu-list__dish-desc">Pineapple,
+                            Minced Beef, Cheese.</span></p>
+                    <span class="restaurant-menu-list__line"></span>
+                    <span class="restaurant-menu-list__price">$30</span>
+                </div>
+            </div>
+            <div class="restaurant-menu-list">
+                <div class="restaurant-menu-list__item">
+                    <p class="restaurant-menu-list__dish">Arcu pede enim justo.<br><span class="restaurant-menu-list__dish-desc">Tuna,
+                            Sweetcorn, Cheese.</span></p>
+                    <span class="restaurant-menu-list__line"></span>
+                    <span class="restaurant-menu-list__price">$45</span>
+                </div>
+                <div class="restaurant-menu-list__item">
+                    <p class="restaurant-menu-list__dish">Cras dapibussemper nisi.<br><span class="restaurant-menu-list__dish-desc">Pineapple,
+                            Minced Beef, Cheese.</span></p>
+                    <span class="restaurant-menu-list__line"></span>
+                    <span class="restaurant-menu-list__price">$32</span>
+                </div>
+                <div class="restaurant-menu-list__item">
+                    <p class="restaurant-menu-list__dish">Quam semper libero.<br><span class="restaurant-menu-list__dish-desc">Cheese,
+                            tomato, mushrooms, onions.</span></p>
+                    <span class="restaurant-menu-list__line"></span>
+                    <span class="restaurant-menu-list__price">$15</span>
+                </div>
+                <div class="restaurant-menu-list__item">
+                    <p class="restaurant-menu-list__dish">Nam eget dui Etiam.<br><span class="restaurant-menu-list__dish-desc">Chicken,
+                            mozzarella cheese, onions.</span></p>
+                    <span class="restaurant-menu-list__line"></span>
+                    <span class="restaurant-menu-list__price">$35</span>
+                </div>
+            </div>
+        </div>
+        <button class="restaurant-menu__load-more-btn">
+            <span>load more</span>
+            <span>|</span>
+            <span class="restaurant-menu__load-more-btn-arrow"></span></button>
+    </section>
 </body>
 
 </html>
