finish dishes section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Resto">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+        crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Aleo:300i,400,700|Over+the+Rainbow" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
@@ -95,6 +97,82 @@
             <span>load more</span>
             <span>|</span>
             <span class="restaurant-menu__load-more-btn-arrow"></span></button>
+    </section>
+
+    <section class="dishes">
+        <div class="dishes-slider">
+            <div class="dishes__slider-navigation">
+                <div class="dishes-slider__header">featured dishes</div>
+                <div class="dishes-slider__nav">
+                    <button class="dishes-slider-nav__btn">
+                        <span class="dishes-slider-nav__btn-img"></span>
+                    </button>
+                    <button class="dishes-slider-nav__btn">
+                        <span class="dishes-slider-nav__btn-img"></span>
+                    </button>
+                    <button class="dishes-slider-nav__btn">
+                        <span class="dishes-slider-nav__btn-img dishes-slider-nav__btn-img--active"></span>
+                    </button>
+                    <button class="dishes-slider-nav__btn">
+                        <span class="dishes-slider-nav__btn-img"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="dishes-slider__items">
+                <div class="dishes-slider__item">
+                    <img src="./img/dish1.png" alt="" class="dishes-slider__item-img">
+                    <span class="dishes-slider__item-name">Fugiat nulla sint
+                        <span class="dishes-slider__item-price">$30</span>
+                    </span>
+                    <span class="dishes-slider__items-rating">
+                        <i class="fas fa-star fa-star--gold"></i>
+                        <i class="fas fa-star fa-star--gold"></i>
+                        <i class="fas fa-star fa-star--gold"></i>
+                        <i class="fas fa-star fa-star--gold"></i>
+                        <i class="fas fa-star fa-star--gray"></i>
+                    </span>
+                </div>
+                <div class="dishes-slider__item">
+                    <img src="./img/dish2.png" alt="" class="dishes-slider__item-img">
+                    <span class="dishes-slider__item-name">Daute irure dolor
+                        <span class="dishes-slider__item-price">$24</span>
+                    </span>
+                    <span class="dishes-slider__items-rating">
+                        <i class="fas fa-star fa-star--gold"></i>
+                        <i class="fas fa-star fa-star--gold"></i>
+                        <i class="fas fa-star fa-star--gold"></i>
+                        <i class="fas fa-star fa-star--gray"></i>
+                        <i class="fas fa-star fa-star--gray"></i>
+                    </span>
+                </div>
+                <div class="dishes-slider__item">
+                    <img src="./img/dish3.png" alt="" class="dishes-slider__item-img">
+                    <span class="dishes-slider__item-name">Officia deserunt mollit
+                        <span class="dishes-slider__item-price">$60</span>
+                    </span>
+                    <span class="dishes-slider__items-rating">
+                        <i class="fas fa-star fa-star--gold"></i>
+                        <i class="fas fa-star fa-star--gold"></i>
+                        <i class="fas fa-star fa-star--gold"></i>
+                        <i class="fas fa-star fa-star--gold"></i>
+                        <i class="fas fa-star fa-star--gold"></i>
+                    </span>
+                </div>
+                <div class="dishes-slider__item">
+                    <img src="./img/dish4.png" alt="" class="dishes-slider__item-img">
+                    <span class="dishes-slider__item-name">Pim minim veniam
+                        <span class="dishes-slider__item-price">$17</span>
+                    </span>
+                    <span class="dishes-slider__items-rating">
+                        <i class="fas fa-star fa-star--gold"></i>
+                        <i class="fas fa-star fa-star--gold"></i>
+                        <i class="fas fa-star fa-star--gold"></i>
+                        <i class="fas fa-star fa-star--gold"></i>
+                        <i class="fas fa-star fa-star--gray"></i>
+                    </span>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
